Bump dependencies + small refactor